Implement dynamic fetching for data on pages
- Added a utility function to handle dynamic API requests
- Updated components to use the new fetchData function
- Improved error handling and state management for data fetching

--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The CocktailDB</title>
+  <link rel="manifest" href="/manifest.json" />
+  <meta name='theme-color' content='#fff' />
+  <meta property="og:url" content="https://exercise-react-cocktail-api.vercel.app/">
+  <meta property="og:type" content="website">
+  <meta property='og:title' content='The Best CocktailDB on net ' />
+  <meta property='og:description' content=' Add some description about the CocktailDB ' />
+  <meta property='og:image' content='https://exercise-react-cocktail-api.vercel.app//opengraph-image.png' />
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="localhost">
+  <meta property="twitter:url" content="https://exercise-react-cocktail-api.vercel.app/">
+  <meta name="twitter:title" content="">
+  <meta name="twitter:description" content="">
+  <meta name="twitter:image" content="">
 </head>
 
 <body>
