addding opengraph for testing

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:type" content="website">
   <meta property='og:title' content='The Best CocktailDB on net ' />
   <meta property='og:description' content=' Add some description about the CocktailDB ' />
-  <meta property='og:image' content='https://exercise-react-cocktail-api.vercel.app//opengraph-image.png' />
+  <meta property='og:image' content='https://exercise-react-cocktail-api.vercel.app/opengraph-image.png' />
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta property="twitter:domain" content="localhost">
