--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <meta property="og:url" content="https://exercise-react-cocktail-api.vercel.app/">
   <meta property="og:type" content="website">
   <meta property='og:title' content='The Best CocktailDB on net ' />
-  <meta property='og:description' content=' Add some description about the CocktailDB ' />
+  <meta property='og:description' content=' Discover an extensive collection of cocktails with detailed recipes and
+    ingredients. Explore, mix, and enjoy the best drinks with CocktailDB!' />
   <meta property='og:image' content='https://exercise-react-cocktail-api.vercel.app/opengraph-image.png' />
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
