--- a/index.html
+++ b/index.html
@@ -7,26 +7,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The CocktailDB</title>
   <link rel="manifest" href="/manifest.json" />
-  <meta name='theme-color' content='#fff' />
+  <meta name="theme-color" content="#fff" />
 
   <!-- Open Graph Meta Tags -->
-  <meta property="og:url" content="https://exercise-react-cocktail-api.vercel.app/">
-  <meta property="og:type" content="website">
-  <meta property='og:title' content='The Best CocktailDB on the Net' />
-  <meta property='og:description'
-    content='Discover an extensive collection of cocktails with detailed recipes and ingredients. Explore, mix, and enjoy the best drinks with CocktailDB!' />
-  <meta property='og:image' content='https://exercise-react-cocktail-api.vercel.app/opengraph-image.png' />
-  <meta property='og:image:alt' content='The Best CocktailDB on the Net' />
-  <meta property='og:image:type' content='image/png' />
-  <meta property='og:image:width' content='1200' />
-  <meta property='og:image:height' content='630' />
+  <meta property="og:url" content="https://exercise-react-cocktail-api.vercel.app/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="The Best CocktailDB on the Net" />
+  <meta property="og:description"
+    content="Discover an extensive collection of cocktails with detailed recipes and ingredients. Explore, mix, and enjoy the best drinks with CocktailDB!" />
+  <meta property="og:image" content="https://exercise-react-cocktail-api.vercel.app/opengraph-image.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
 
   <!-- Twitter Meta Tags -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="The Best CocktailDB on the Net">
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="The Best CocktailDB on the Net" />
   <meta name="twitter:description"
-    content="Discover an extensive collection of cocktails with detailed recipes and ingredients. Explore, mix, and enjoy the best drinks with CocktailDB!">
-  <meta name="twitter:image" content="https://exercise-react-cocktail-api.vercel.app/opengraph-image.png">
+    content="Discover an extensive collection of cocktails with detailed recipes and ingredients. Explore, mix, and enjoy the best drinks with CocktailDB!" />
+  <meta name="twitter:image" content="https://exercise-react-cocktail-api.vercel.app/opengraph-image.png" />
 </head>
 
 <body>
