--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
   <link rel="icon" type="image/svg+xml" href="/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The CocktailDB</title>
+
+  <!-- Favicon -->
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+
+  <!-- Manifest Files -->
   <link rel="manifest" href="/site.webmanifest" />
   <link rel="manifest" href="/manifest.json">
+
   <meta name="theme-color" content="#fff" />
 
   <!-- Open Graph Meta Tags -->
@@ -24,8 +29,6 @@
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta property='og:image:width' content='1024' />
-  <meta property='og:image:height' content='512' />
   <meta name="twitter:title" content="The Best CocktailDB on the Net" />
   <meta name="twitter:description"
     content="Discover an extensive collection of cocktails with detailed recipes and ingredients. Explore, mix, and enjoy the best drinks with CocktailDB!" />
