adding some styles for the button in the landing page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="The Best CocktailDB on the Net" />
   <meta property="og:description"
-    content="Discover an extensive collection of cocktails with detailed recipes and ingredients. Explore, mix, and enjoy the best drinks with CocktailDB!" />
+    content="Discover an extensive collection of cocktails with detailed recipes and ingredients. Explore, mix, and enjoy the best drinks with CocktailDB! 🍹" />
   <meta property="og:image" content="https://exercise-react-cocktail-api.vercel.app/opengraph-image.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
